app-sample-1/app-sample-1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-sample-1
  labels:
    app: app-sample-1
    env: app-sample-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sample-1
  template:
    metadata:
      labels:
        app: app-sample-1
    spec:
      containers:
        - name: app-sample-1
          image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
