app-sample-1/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-sample
  labels:
    app: frontend-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-sample
  template:
    metadata:
      labels:
        app: frontend-sample
    spec:
      containers:
        - name: frontend-sample
          image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
          imagePullPolicy: Always
          ports:
          - containerPort: 80
